src/objects/c2g__codaCashEntryLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcashentry</customHelpPage>
    <description>Stores the line items on cash entry.</description>
    <fields>
        <fullName>c2g__AccountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItemsAcDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItemsAcDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItemsAcDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountPaymentMethod__c</fullName>
        <label>Account Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__AccountReference__c</fullName>
        <label>Account Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountValue__c</fullName>
        <label>Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntryCurrency__c</fullName>
        <description>Cash entry currency field for layouts</description>
        <formula>c2g__CashEntry__r.c2g__CashEntryCurrency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Entry Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntryDate__c</fullName>
        <formula>c2g__CashEntry__r.c2g__Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntryValue__c</fullName>
        <label>Cash Entry Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntry__c</fullName>
        <label>Cash Entry</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NetValue__c</fullName>
        <formula>c2g__BankAccountValue__c  -  c2g__Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>Cash_Entry_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FOR DEPRECATION:Payment Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>R00N20000001gr8zEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <label>FOR DEPRECATION:Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SignedLineCharges__c</fullName>
        <formula>IF( text(c2g__CashEntry__r.c2g__Type__c) = &quot;Refund&quot;, c2g__Charges__c  *-1, c2g__Charges__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Line Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SignedNetValue__c</fullName>
        <formula>IF( text(c2g__CashEntry__r.c2g__Type__c) = &quot;Refund&quot;, c2g__NetValue__c *-1, c2g__NetValue__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SignedValue__c</fullName>
        <formula>IF( text(c2g__CashEntry__r.c2g__Type__c) = &quot;Refund&quot;, c2g__CashEntryValue__c *-1, c2g__CashEntryValue__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcash__DeriveAccountDimensions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Account Dimensions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcash__DeriveLineNumber__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Line Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcash__DerivePaymentMethod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <label>Cash Entry Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cash Entry Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Entry Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>